# news-app-valdi

./: .gitignore  AGENTS.md  AndroidManifest.xml  BUILD.bazel  README.md  README_NEWS_APP.md  WORKSPACE  package.json
app_assets/Assets.xcassets/AppIcon.appiconset/: Contents.json
do/: build
modules/news_app/: BUILD.bazel  tsconfig.json
modules/news_app/src/: App.tsx
modules/news_app/src/android/: BUILD.bazel  ValdiWebView.kt  WebLauncherImpl.kt  build_dependencies.gradle
modules/news_app/src/components/: APIKeyConfig.tsx  ArticleDetail.tsx  NewsList.tsx  SearchNews.tsx
modules/news_app/src/ios/: BUILD.bazel  SCWebLauncherImpl.h  SCWebLauncherImpl.m  ValdiWebView.h  ValdiWebView.m  ValdiWebView.swift
modules/news_app/src/pages/: ArticleDetailPage.tsx  NewsListPage.tsx  SearchPage.tsx  WebViewPage.tsx
modules/news_app/src/services/: NewsAPIService.ts  WebLauncher.ts
research/: safe_area_support.md
