load("@valdi//bzl/valdi:valdi_application.bzl", "valdi_application")
load("@valdi//bzl/valdi:valdi_exported_library.bzl", "valdi_exported_library")

valdi_application(
    name = "dev_news",
    ios_bundle_id = "com.vanks.devnews",
    android_package = "com.vanks.devnews",
    android_app_manifest = "AndroidManifest.xml",
    ios_families = ["iphone"],
    root_component_path = "App@news_app/src/App",
    title = "Dev News",
    version = "1.0.0",
    
    # Add your app icon here
    android_app_icon_name = "app_icon",
    android_resource_files = glob(["app_assets/android/**"]),
    ios_app_icons = glob(["app_assets/Assets.xcassets/**"]),

    deps = ["//modules/news_app"],
)

valdi_exported_library(
    name = "news_app_export",
    ios_bundle_id = "com.vanks.devnews.lib",
    ios_bundle_name = "Dev News",
    deps = ["//modules/news_app"],
)
