load("@valdi//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "news_app",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    android_class_path = "com.snap.newsapp",
    android_deps = ["//modules/news_app/src/android:weblauncher_android"],
    ios_deps = ["//modules/news_app/src/ios:weblauncher_ios"],
    ios_module_name = "NewsApp",
    res = glob([
        "res/**/*.jpeg",
        "res/**/*.jpg",
        "res/**/*.png",
        "res/**/*.svg",
        "res/**/*.webp",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
        "@valdi//src/valdi_modules/src/valdi/valdi_tsx",
        "@valdi//src/valdi_modules/src/valdi/valdi_http",
        "@valdi//src/valdi_modules/src/valdi/valdi_navigation",
    ],
)
